--- a/web/css/default.css
+++ b/web/css/default.css
@@ -1,9 +1,10 @@
-#sf_admin_container a
-{
-  color: #464646;
-  text-decoration: none;
-}
-
+/*
+//#sf_admin_container a
+//{
+//  color: #464646;
+//  text-decoration: none;
+//}
+*/
 #sf_admin_container a:hover
 {
   color: #000;
@@ -139,32 +140,33 @@
   margin-right: 10px;
 }
 
-#sf_admin_container ul li a
-{
-  padding-left: 20px;
-  background: url(../images/default.png) no-repeat 0 0;
-}
-
-#sf_admin_container ul li.sf_admin_action_new a
-{
-  background: url(../images/new.png) no-repeat 0 0;
-}
-
-#sf_admin_container ul li.sf_admin_action_delete a
-{
-  background: url(../images/delete.png) no-repeat 0 0;
-}
-
-#sf_admin_container ul li.sf_admin_action_list a
-{
-  background: url(../images/list.png) no-repeat 0 0;
-}
-
-#sf_admin_container ul li.sf_admin_action_edit a
-{
-  background: url(../images/edit.png) no-repeat 0 0;
-}
-
+/*
+//#sf_admin_container ul li a
+//{
+//  padding-left: 20px;
+//  background: url(../images/default.png) no-repeat 0 0;
+//}
+//
+//#sf_admin_container ul li.sf_admin_action_new a
+//{
+//  background: url(../images/new.png) no-repeat 0 0;
+//}
+//
+//#sf_admin_container ul li.sf_admin_action_delete a
+//{
+//  background: url(../images/delete.png) no-repeat 0 0;
+//}
+//
+//#sf_admin_container ul li.sf_admin_action_list a
+//{
+//  background: url(../images/list.png) no-repeat 0 0;
+//}
+//
+//#sf_admin_container ul li.sf_admin_action_edit a
+//{
+//  background: url(../images/edit.png) no-repeat 0 0;
+//}
+*/
 #sf_admin_container ul li.sf_admin_action_moveup a, #sf_admin_container ul li.sf_admin_action_moveup span {
   background: url(../images/arrow_up.png) no-repeat 0 0;
 }
